# bsl_pdp_api

./: .env  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: alembic.ini  env.py
alembic/versions/: 1.0_init_migration.py  1.1_drop_unused_columns.py  1.2_add_new_columns_to_user_table.py
app/: permissions.py  utils.py
app/api/: auth.py  user.py
app/core/: exception_handlers.py  exceptions.py  settings.py
app/crud/: base.py  user_crud.py
app/schemas/: user.py
app/services/: user_service.py
db/: __init__.py
db/models/: user.py
mq/: __init__.py
