[tool.poetry]
name = "bsl_pdp_api"
version = "0.1.0"
description = ""
authors = ["Sergey Kobylkin <s.kobylkin@bsl.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
